<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/instruct"
        android:layout_width="234dp"
        android:layout_height="42dp"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/instruct"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/truckSize"
        android:layout_width="197dp"
        android:layout_height="103dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instruct">

        <RadioButton
            android:id="@+id/tenFoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/ten"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/seventeenFoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seventeen"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/twentySixFoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twentysix"
            android:textSize="20sp" />

    </RadioGroup>

    <EditText
        android:id="@+id/txtMiles"
        android:layout_width="251dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/miles"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnRent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/truckSize" />

    <Button
        android:id="@+id/btnRent"
        android:layout_width="248dp"
        android:layout_height="56dp"
        android:text="@string/rent"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/trucks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMiles" />

    <ImageView
        android:id="@+id/trucks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/trucks" />
</androidx.constraintlayout.widget.ConstraintLayout>